k8s/integration/configMap.yml
apiVersion: v1
kind: Namespace
metadata:
  name: srs-integration-ns
