k8s/integration/secret.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sts-integration-ns
