k8s/integration/appDeployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: srs-integration-ns

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: srs-backend-app
  namespace: srs-integration-ns
  labels:
    app: srs-integration-app
spec:
    replicas: 1
    selector:
      matchLabels:
        app: srs-backend-app
    template:
      metadata:
        labels:
          app: srs-backend-app
      spec:
        containers:
          - name: srs-integration-app
            image: registry.digitalocean.com/wscevents/wscevents:latest
#            resources:
#              limits:
#                memory: "128Mi"
#                cpu: "500m"
            ports:
              - containerPort: 8400
---

apiVersion: v1
kind: Service
metadata:
  name: srs-integration-app
  namespace: srs-integration-ns
spec:
  selector:
    app: srs-backend-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8400
