k8s/integration/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srs-ingress
  namespace: srs-integration-ns
spec:
  ingressClassName: nginx
  rules:
    - host: events.wallstreetcheetah.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: srs-integration-app
                port:
                  number: 80
